<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="lk.jiat.orter.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="lk.jiat.orter.ui.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="lk.jiat.orter.ui.explore.ExploreFragment"
        android:label="@string/explore"
        tools:layout="@layout/fragment_explore" />
    <fragment
        android:id="@+id/orders_nav"
        android:name="lk.jiat.orter.ui.order.OrderFragment"
        android:label="@string/order"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/profile_nav"
        android:name="lk.jiat.orter.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>