<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    app:layout_constraintHeight_max="wrap"
    app:layout_constraintWidth_max="wrap"
    tools:context=".LoginActivity">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="246dp"
                    android:layout_height="71dp"
                    android:contentDescription="@string/orter_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/orterlogo" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="248dp"
                    android:layout_height="23dp"
                    android:layout_marginTop="24dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button2">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="#BDBDBD" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/or"
                        android:textColor="#000000" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="#BDBDBD" />

                </LinearLayout>

                <Button
                    android:id="@+id/button6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:background="@null"
                    android:backgroundTint="#FFFFFF"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/continue_with_google"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    app:cornerRadius="6dp"
                    app:icon="@drawable/google"
                    app:iconGravity="textStart"
                    app:iconTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintWidth_max="400dp"
                    app:strokeColor="#E9E9E9"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@null"
                    android:backgroundTint="#FFFFFF"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/continue_with_facebook"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    app:cornerRadius="6dp"
                    app:icon="@drawable/facebook"

                    app:iconGravity="textStart"
                    app:iconTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button6"
                    app:layout_constraintWidth_max="400dp"
                    app:strokeColor="#E9E9E9"
                    app:strokeWidth="1dp" />

                <TextView
                    android:id="@+id/textView106"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/email"
                    app:layout_constraintStart_toStartOf="@+id/editTextText4"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView107"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/password"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/welcome2"
                    android:textColor="#ABAAAA"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/login"
                    app:cornerRadius="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
                    app:layout_constraintWidth_max="400dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button7">

                    <TextView
                        android:id="@+id/dontHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/dont_have_account"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/signUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/inter_semibold"
                        android:text="@string/sign_up"
                        android:textColor="#000000"
                        android:textStyle="bold" />
                </LinearLayout>

                <EditText
                    android:id="@+id/editTextText4"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/light_border"
                    android:drawableStart="@drawable/baseline_alternate_email_24"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:fontFamily="@font/inter"
                    android:hint="@string/enter_email"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView106"
                    app:layout_constraintWidth_max="400dp" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/light_border"
                    android:drawableStart="@drawable/lock"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:fontFamily="@font/inter"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView107"
                    app:layout_constraintWidth_max="400dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>